tests/ui/rfcs/rfc-2632-const-trait-impl/tilde_const_on_impl_bound.rs
// known-bug: #110395
// FIXME check-pass
#![feature(const_trait_impl, effects)]

#[const_trait]
trait Foo {
    fn foo(&self) {}
}

struct Bar<T>(T);

impl<T: ~const Foo> Bar<T> {
    const fn foo(&self) {
        self.0.foo()
    }
}

fn main() {}
